--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: My Resume
+title: Data Scientist
 url: 'http://webjeda.com'
 baseurl: '/online-cv' #change it according to your repository name
 
@@ -13,12 +13,12 @@ baseurl: '/online-cv' #change it according to your repository name
 
 
 #Profile information
-name: Alan Doe
-tagline: Full Stack Developer
-pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+name: Nguyen Hoang Nguyen
+tagline: Data Scientist
+pic: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
-email: hello@webjeda.com
+email: nhnguyen.0486@gmail.com
 phone: 012 345 6789
 website: blog.webjeda.com #do not add http://
 linkedin: alandoe
