--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,8 @@ pic: profile.jpg  #place a 100x100 picture inside /assets/images/ folder and pro
 #sidebar links
 email: nhnguyen.0486@gmail.com
 phone: 012 345 6789
-website: blog.webjeda.com #do not add http://
-linkedin: alandoe
-github: sharu725
-twitter: '@webjeda'
+linkedin: hoang-nguyen-nguyen
+github: nguyen-hoang-nguyen
 
 
 # Tracker
